# fn-ptr

./: Cargo.toml  LICENSE  README.md  build.rs  out.txt
.github/workflows/: ci.yml  main.yml
src/: abi.rs  abi_value.rs  arity.rs  base.rs  build.rs  conv.rs  conversion.rs  impl.rs  lib.rs  marker.rs  markers.rs  prelude.rs  safety.rs  tuple.rs
tests/: basic.rs  extern.rs  safety.rs  static.rs  with_args.rs  with_output.rs
