[package]
name = "fn-ptr"
description = "A crate providing a function pointer trait."
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
const_panic = "0.2"
ffi-opaque = "2.0.1"
konst = "0.4"

[dev-dependencies]
static_assertions = "1.1"

[features]
default = []
stable = []
nightly = []
max-arity-12 = []

[build-dependencies]
cargo-emit = "0.2"
build-target = "0.8"
rustc_version = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(nightly_build)',
	'cfg(has_abi_cdecl)',
	'cfg(has_abi_stdcall)',
	'cfg(has_abi_fastcall)',
	'cfg(has_abi_win64)',
	'cfg(has_abi_sysv64)',
	'cfg(has_abi_aapcs)'
]}
