[package]
name = "fn-ptr"
version = "0.9.1"
description = "A utility crate for introspecting and rewriting function pointer types at compile time."
repository = "https://github.com/OpenByteDev/fn-ptr"
documentation = "https://docs.rs/fn-ptr"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2024"
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
keywords = ["fn", "function", "fn_traits"]

[dependencies]
ffi-opaque = "2.0"
konst = { version = "0.4", features = ["cmp"], default-features = false }
cfg-tt = "0.3"

[dev-dependencies]
static_assertions = "1.1"

[build-dependencies]
cargo-emit = "0.2"
build-target = "0.8"
rustc_version = "0.4"

[features]
default = []
stable = []
nightly = []
abi_vectorcall = ["nightly"]
max-arity-12 = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(nightly_build)',
	
	'cfg(has_abi_cdecl)',
	'cfg(has_abi_stdcall)',
	'cfg(has_abi_fastcall)',
	'cfg(has_abi_thiscall)',
	'cfg(has_abi_vectorcall)',
	'cfg(has_abi_win64)',
	'cfg(has_abi_sysv64)',
	'cfg(has_abi_aapcs)',
	'cfg(has_abi_efiapi)'
]}
